src/styles/index.css
:root {
  /* https://tailwindcss.com/docs/customizing-colors */
  --green-900: #14532d;
  --green-700: #15803d;
  --green-500: #22c55e;
  --sky-300: #bae6fd;
  --white: #fff;
  --underline-offset: 2px;
}

html {
  scroll-behavior: smooth;
}

a {
  display: inline-block;
  text-decoration: none;
}

a.active {
  font-weight: bolder;
  text-decoration: underline;
  text-underline-offset: var(--underline-offset);
}

mark {
  color: inherit;
  background: none;
  text-decoration: underline;
  text-underline-offset: var(--underline-offset);
  text-decoration-color: var(--green-700);
  text-decoration-style: dashed;
}

mark:hover {
  text-decoration: none;
  background-color: var(--green-700);
  color: white;
}

